// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiBetaBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiBetaBadge ouiBetaBadge--hollow testClass1 testClass2"
  data-test-subj="test subject string"
  title="Beta"
>
  Beta
</span>
`;

exports[`OuiBetaBadge props color hollow is rendered 1`] = `
<span
  class="ouiBetaBadge ouiBetaBadge--hollow"
  title="Beta"
>
  Beta
</span>
`;

exports[`OuiBetaBadge props color subdued is rendered 1`] = `
<span
  class="ouiBetaBadge ouiBetaBadge--subdued"
  title="Beta"
>
  Beta
</span>
`;

exports[`OuiBetaBadge props size m is rendered 1`] = `
<span
  class="ouiBetaBadge ouiBetaBadge--hollow"
  title="Beta"
>
  Beta
</span>
`;

exports[`OuiBetaBadge props size s is rendered 1`] = `
<span
  class="ouiBetaBadge ouiBetaBadge--hollow ouiBetaBadge--small"
  title="Beta"
>
  Beta
</span>
`;
